added an image which is not in use

--- a/Fin Tech Ass/password.html
+++ b/Fin Tech Ass/password.html
@@ -125,7 +125,8 @@
                     }
                    if (take[0].password==pas.value && paw.value!="") {
                         sake[q].password=paw.value;
-                        alert(sake[q].password)
+                        //alert(sake[q].password)
+                        alert("password changed successfully")
                         localStorage.setItem("Database",JSON.stringify(sake) );
                    }
                    else if(take[0].password!=pas.value&&pas.value!=""){
