--- a/Fin Tech Ass/transaction.html
+++ b/Fin Tech Ass/transaction.html
@@ -177,7 +177,7 @@
                     set=JSON.parse(localStorage.getItem("DatabaseAcc"));
                     timeArr.push(time)
                     set.push(file); 
-                    alert(set);
+                   // alert(set);
                     localStorage.setItem("DatabaseAcc",JSON.stringify(set));
                     set=JSON.parse(localStorage.getItem("DatabaseAcc"));}}
       
