--- a/sign up.html
+++ b/sign up.html
@@ -90,6 +90,9 @@
             }
         })
            function mySignup(){
+            if (inputs2.value===""||inputs3.value===""||inputs4.value===""||inputs1.value==="") {
+                alert("You have not filled all the details yet")
+            }
                for(i=0; i<=acc.length;i++)
                {
                 
